# fmt

./: Cargo.toml  rustfmt.toml
benches/: counters.rs
src/: adapters.rs  adhoc.rs  adhoc2.rs  color.rs  count.rs  count_bytes.rs  count_chars.rs  custom.rs  display_padded.rs  either.rs  hex.rs  hexiter.rs  hexslice.rs  hexviewer.rs  iter.rs  joined.rs  joined2.rs  lib.rs  logic.rs  main.rs  map.rs  pad.rs  producer.rs  replace.rs  serde_json.rs  slice.rs  style.rs  utils.rs
