[package]
name = "fmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "0.5.1" }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
ansi_term = { version = "0.12.1", optional = true }

[features]
default = ["serde", "serde_json", "ansi_term"]

[dev-dependencies]
criterion = { version = "0.5.1" }

[[bench]]
name = "counters"
harness = false
